fix(ObjectPage): position expand/collapse buttons correctly (#6897)
Fixes #6867

--- a/packages/main/src/components/ObjectPage/ObjectPage.module.css
+++ b/packages/main/src/components/ObjectPage/ObjectPage.module.css
@@ -52,6 +52,11 @@
   }
 }
 
+/*:has cannot be nested*/
+.header:has([data-component-name='ATwithImageSnappedContentContainer']) [data-component-name='ObjectPageTitle'] {
+  padding-block-end: 0;
+}
+
 .headerCollapsed {
   --_ui5wcr_ObjectPage_header_display: none;
   --_ui5wcr_ObjectPage_title_fontsize: var(--sapObjectHeader_Title_SnappedFontSize);
@@ -177,6 +182,7 @@
 
 .snappedContent {
   grid-column: 1 / span 2;
+  padding-block-end: 0.5rem;
 }
 
 .clickArea {
